force-app/main/default/objects/Script_Block__c/Script_Block__c.object-meta.xml
<CustomObject>
    <description>Ordered screenplay block (paragraph) within a scene. Autosave updates dirty rows only.</description>
    <label>Script Block</label>
    <nameField>
        <displayFormat>BLK-{000000}</displayFormat>
        <label>Block Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>