force-app/main/default/objects/Script_Block__c/fields/Block_Type__c.field-meta.xml
<CustomField>
    <fullName>Block_Type__c</fullName>
    <description>Maps to LWC scriptEditor SCREENPLAY_TYPES values: scene-heading, action, character, dialogue, parenthetical, transition.</description>
    <label>Block Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>scene-heading</fullName>
                <default>true</default>
                <label>Scene Heading</label>
            </value>
            <value>
                <fullName>action</fullName>
                <label>Action</label>
            </value>
            <value>
                <fullName>character</fullName>
                <label>Character</label>
            </value>
            <value>
                <fullName>dialogue</fullName>
                <label>Dialogue</label>
            </value>
            <value>
                <fullName>parenthetical</fullName>
                <label>Parenthetical</label>
            </value>
            <value>
                <fullName>transition</fullName>
                <label>Transition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>