force-app/main/default/objects/Script_Block__c/fields/Format_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Format_Metadata__c</fullName>
    <description>Optional JSON for editor formatting metadata.</description>
    <label>Format Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>