force-app/main/default/objects/Script_Block__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Blocks</relationshipLabel>
    <relationshipName>Blocks</relationshipName>
    <type>MasterDetail</type>
</CustomField>