force-app/main/default/objects/Script_Block__c/fields/Script_Scene__c.field-meta.xml
<CustomField>
    <fullName>Script_Scene__c</fullName>
    <label>Script Scene</label>
    <referenceTo>Script_Scene__c</referenceTo>
    <relationshipLabel>Blocks</relationshipLabel>
    <relationshipName>Blocks</relationshipName>
    <type>MasterDetail</type>
</CustomField>