force-app/main/default/objects/Script_Block__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Paragraph body for this screenplay block.</description>
    <label>Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>