force-app/main/default/objects/Script_Block__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Script__c</columns>
    <columns>Script_Scene__c</columns>
    <columns>Sequence__c</columns>
    <columns>Block_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Script Blocks</label>
</ListView>